Fix inset box shadow within input on Safari

--- a/app/styles/_dashboard.scss
+++ b/app/styles/_dashboard.scss
@@ -54,6 +54,7 @@
 }
 
 input[type='text'] {
+  -webkit-appearance: none;
   border-radius: 3px;
   padding: 4px 8px;
   border: solid 1px #aaa;
